# company-matcher

./: .env  README.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py  tailwind.config.ts
.claude/: settings.local.json
src/: index.css
src/company/: __init__.py  company.py  sec_company_tickers.json
src/components/: CompanyAnalyzer.tsx  CompanyResult.tsx  CompetitorAnalyzer.tsx  SubsidiaryAnalyzer.tsx
src/pages/: Index.tsx
tests/: test_company.py  test_competitors.py  test_subsidiaries.py
